--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         min-height: 100vh;
         margin: 0;
         padding: 0;
-        background-color: rgb(0,0,0);
+        background-color: rgb(0, 0, 0);
       }
 
       #canvas {
@@ -50,12 +50,11 @@
       <a href="https://github.com/CreamyMilk/checker-illustration">
         <code>Show me the code </code>
       </a>
-
     </div>
 
     <div id="canvas">
       <svg viewBox="0 0 100 100">
-        <rect x="0" y="0" width="100" height="100" id="frammer"></rect>
+        <rect x="0" y="0" width="90vw" height="100" id="frammer"></rect>
       </svg>
     </div>
 
@@ -69,13 +68,9 @@
         margin-bottom: 40px;
       "
     >
-
-      <label for="colorWell"> <h3>
-        Pick new color 💙 here 👇 :
-      </h3>
-</label>
+      <label for="colorWell"> <h3>Pick new color 💙 here 👇 :</h3> </label>
       <input type="color" value="#1791fc" id="colorWell" />
-      </div>
+    </div>
 
     <script>
       // let colorPicker = document.getElementById("c")
@@ -83,7 +78,7 @@
       // colorPicker.addEventListener("change", watchColorPicker, false);
 
       let colorWell;
-      let pickedColor = "#1791fc"
+      let pickedColor = "#1791fc";
 
       window.addEventListener("load", startup, false);
 
@@ -96,23 +91,21 @@
       }
 
       function updateFirst(event) {
-
         pickedColor = event.target.value;
 
-        document.getElementById("frammer").style.stroke = pickedColor
-        document.querySelectorAll("circle").forEach((s)=>{
-          s.style.stroke = pickedColor
-        })
+        document.getElementById("frammer").style.stroke = pickedColor;
+        document.querySelectorAll("circle").forEach((s) => {
+          s.style.stroke = pickedColor;
+        });
       }
 
       function updateAll(event) {
-
         pickedColor = event.target.value;
 
-        document.getElementById("frammer").style.stroke = pickedColor
-        document.querySelectorAll("circle").forEach((s)=>{
-          s.style.stroke = pickedColor
-        })
+        document.getElementById("frammer").style.stroke = pickedColor;
+        document.querySelectorAll("circle").forEach((s) => {
+          s.style.stroke = pickedColor;
+        });
       }
 
       function watchColorPicker(event) {
@@ -135,8 +128,8 @@
           c = (d) => {
             b.elapsed = d - b.start;
             const e = getProgress(b);
-            (a.style.stroke =  pickedColor),
-            (a.style.transform = `scale(${200 * e})`),
+            (a.style.stroke = pickedColor),
+              (a.style.transform = `scale(${200 * e})`),
               1 > e ? requestAnimationFrame(c) : a.parentNode.removeChild(a);
           };
         requestAnimationFrame(c);
