feat : add meta data stuff for share magic

--- a/index.html
+++ b/index.html
@@ -2,7 +2,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ripples</title>
+    <meta
+        property="og:title"
+        content="💧 Kinnnnnnyua's take on water dropplets"
+      />
+
+      <meta
+        content="./demo.gif"
+        property="og:image"
+      />
+
+      <meta
+       property="og:image" 
+       itemProp="image" 
+      content="./a.jpg"
+       />
+
+      <meta
+        property="og:description"
+        content="Water ripples are just nice"
+      />
+
+      <meta
+        property="og:url"
+        content="https://creamymilk.github.io/dropplets/"
+      />
+
+    <title>💧 Kinnnnnnyua's take on ripples"</title>
     <style>
       body {
         display: grid;
