--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <div id="canvas">
       <svg viewBox="0 0 100 100">
-        <rect x="0" y="0" width="90vw" height="100" id="frammer"></rect>
+        <rect x="0" y="0" width="100" height="100" id="frammer"></rect>
       </svg>
     </div>
 
