--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
         property="og:title"
-        content="💧 Kinnnnnnyua's take on water dropplets"
+        content="💧 Kinnnnnnyua's take on water ripples"
       />
 
       <meta
